# pkg/api/api.gen.go
@@ -117,6 +117,21 @@ type ExistingResource struct {
 	UpdatedAt time.Time `json:"updated_at"`
 }
 
+// FieldValidationError defines model for FieldValidationError.
+type FieldValidationError struct {
+	// Field The name of the invalid field.
+	Field string `json:"field"`
+
+	// Message A message describing why the field is invalid.
+	Message string `json:"message"`
+
+	// Param Additional configuration related to the validation.
+	Param *string `json:"param,omitempty"`
+
+	// Validation The validation that failed.
+	Validation string `json:"validation"`
+}
+
 // ID defines model for ID.
 type ID = string
 
@@ -144,6 +159,24 @@ type SplitProperties struct {
 	ExchangeId            ID             `json:"exchange_id"`
 	Memo                  *string        `json:"memo,omitempty"`
 	Status                ExchangeStatus `json:"status"`
+}
+
+// ValidationError defines model for ValidationError.
+type ValidationError struct {
+	// Detail A human-readable explanation specific to this occurrence of the problem.
+	Detail *string `json:"detail,omitempty"`
+
+	// Status The HTTP status code generated by the origin server for this occurrence of the problem.
+	Status int `json:"status"`
+
+	// Title A short, human-readable summary of the problem type.
+	Title string `json:"title"`
+
+	// Type A URI reference that identifies the problem type.
+	Type ErrorType `json:"type"`
+
+	// ValidationErrors A list of fields that failed validation.
+	ValidationErrors []FieldValidationError `json:"validation_errors"`
 }
 
 // Page defines model for page.
@@ -498,7 +531,7 @@ func (response CreateBook201JSONResponse) VisitCreateBookResponse(w http.Respons
 	return json.NewEncoder(w).Encode(response)
 }
 
-type CreateBook422JSONResponse Error
+type CreateBook422JSONResponse ValidationError
 
 func (response CreateBook422JSONResponse) VisitCreateBookResponse(w http.ResponseWriter) error {
 	w.Header().Set("Content-Type", "application/json")
