# pkg/controller/errors.go
@@ -5,6 +5,7 @@ import (
 	"net/http"
 
 	"adeynack.net/lapiasse/pkg/api"
+	"github.com/go-playground/validator/v10"
 	"github.com/samber/lo"
 )
 
@@ -26,11 +27,20 @@ func api404ErrorFromId(
 	)
 }
 
-func api422Error(err error) api.Error {
-	return api.Error{
-		Type:   api.ErrorTypeErrorValidation,
-		Title:  "Resource did not validate",
-		Detail: lo.ToPtr(err.Error()),
-		Status: http.StatusUnprocessableEntity,
+func api422Error(errs validator.ValidationErrors) *api.ValidationError {
+	validationErrors := lo.Map(errs, func(fe validator.FieldError, _ int) api.FieldValidationError {
+		return api.FieldValidationError{
+			Field:      fe.Namespace(),
+			Message:    fe.Error(),
+			Validation: fe.ActualTag(),
+			Param:      lo.EmptyableToPtr(fe.Param()),
+		}
+	})
+
+	return &api.ValidationError{
+		Type:             api.ErrorTypeErrorValidation,
+		Title:            "Resource did not validate",
+		Status:           http.StatusUnprocessableEntity,
+		ValidationErrors: validationErrors,
 	}
 }
